update local position weather

--- a/index.html
+++ b/index.html
@@ -8,16 +8,63 @@
     <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div class="location">
-        <h1 class="location-timezone">Timezone</h1>
-        <canvas class="weather-icon" width="70" height="70">icon</canvas>
-    </div>
-    <div class="temperature">
-        <div class="temperature-value">
-            <h2 class="temperature-degree">34</h2>
-            <span class="temperature-unit">F</span>
+    <div class="now-pos">
+        <div class="location">
+            <h1 class="location-timezone">Timezone</h1>
+            <canvas class="weather-icon" width="70" height="70">icon</canvas>
         </div>
-        <div class="temperature-description">it's cold</div>
+        <div class="temperature">
+            <div class="temperature-value">
+                <h2 class="temperature-degree">34</h2>
+                <span class="temperature-unit">F</span>
+            </div>
+            <div class="temperature-description">it's cold</div>
+        </div>
+    </div>
+
+    <div class="selected-pos">
+        <div class="weather-card">
+            <div class="city">
+                <h1>Surabaya</h1>
+                <canvas class="weather-icon-sby" width="40" height="40">icon</canvas>
+            </div>
+            <div class="temperature-sby">
+                <div class="temperature-value">
+                    <h2 class="temperature-degree-sby">34</h2>
+                    <span class="temperature-unit-sby">F</span>
+                </div>
+                <div class="temperature-description-sby">it's cold</div>
+            </div>
+        </div>
+
+        <div class="weather-card">
+            <div class="city">
+                <h1>Malang</h1>
+                <canvas class="weather-icon-mlg" width="40" height="40">icon</canvas>
+            </div>
+            <div class="temperature-mlg">
+                <div class="temperature-value">
+                    <h2 class="temperature-degree-mlg">34</h2>
+                    <span class="temperature-unit-mlg">F</span>
+                </div>
+                <div class="temperature-description-mlg">it's cold</div>
+            </div>
+        </div>
+
+        <div class="weather-card">
+            <div class="city">
+                <h1>Kediri</h1>
+                <canvas class="weather-icon-kdr" width="40" height="40">icon</canvas>
+            </div>
+            <div class="temperature-kdr">
+                <div class="temperature-value">
+                    <h2 class="temperature-degree-kediri">34</h2>
+                    <span class="temperature-unit-kdr">F</span>
+                </div>
+                <div class="temperature-description-kediri">it's cold</div>
+            </div>
+        </div>
+      
     </div>
     
     <script src="js/skycons.js"></script>
